# ai-cloud-handson

./: main.py  pyproject.toml
bedrock-handson/: extended_thinking.py  main.py  streaming.py  tool_uses.py
docs/: langgraph-concurrent-execution.md
langfuse-handson/: boto3.py  langchain.py  langgraph.py
langgraph-handson/: main.py  tool_uses.py
langgraph-handson/human_roop_agent/: agent_tools.py  main.py
langgraph-handson/investigation_agent/: agent_state.py  main.py
langgraph-handson/investigation_agent/node/: agnet_node.py
langgraph-handson/mcp_tools_agent/: agent_state.py  bedrock_model_providers.md  main.py  mcp_tools.py
langgraph-handson/mcp_tools_agent/node/: agent_node.py
langgraph-handson/report/: tavily_report.md
strands-handson/: main.py  tool_uses.py
