[project]
name = "ai-cloud-handson"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "bedrock-agentcore==0.1.2",
    "boto3==1.40.21",
    "feedparser==6.0.11",
    "langchain==0.3.27",
    "langchain-aws==0.2.31",
    "langchain-chroma==0.2.5",
    "langchain-community==0.3.29",
    "langchain-mcp-adapters==0.1.9",
    "langchain-tavily==0.2.11",
    "langfuse==3.3.4",
    "langgraph==0.6.6",
    "pydantic==2.11.7",
    "python-dotenv==1.1.1",
    "ragas==0.3.2",
    "strands-agents==1.6.0",
    "strands-agents-tools==0.2.5",
    "streamlit==1.49.1",
    "tavily-python==0.7.11",
]
